1998-10-09  Harri Porten  <porten@kde.org>

	* modem.cpp: additional data flushes
	* pppdata.cpp: don't need workaround for '$' with recent kde libraries

1998-10-05  Mario Weilguni <mweilguni@kde.org>

	* better QuickHelp text, proof-read by a native english
	speaker. Thanks a lot to Martin A. Brown for doing this!

1998-10-04  Harri Porten  <porten@kde.org>

	* miniterm.cpp: fixed toolbar

1998-10-03  Harri Porten  <porten@kde.org>

	* modem.cpp: disentangled Modem class from other Widgets, i.e.
	removed the Multiple Inheritance I introduced earlier.
	Drawback: another global pointer :(
	* main.cpp: since KConfig neglects the real user id when creating
        config files we have to give kppprc back to the user ourself.
	* connect.cpp: pass something more useful to parseModemSpeed()	
	* removed lots of unused/redundant code and variables

1998-10-02  Mario Weilguni <mweilguni@kde.org>

	* fixed that stupid segfault combined with the throughput graph
	* "make" did not set the suid bit anymore. Why? However, I fixed
	that

1998-09-29  Mario Weilguni <mweilguni@kde.org>

	* fixed a bug in the graphing code
	* runtests.cpp: fixed typos

1998-09-28  Harri Porten  <porten@kde.org>

	* ppplog.cpp: reduce memory consumption, small fixes
	* pppdata.cpp: fixed segfaults caused by non-readable kppprc

1998-09-28  Harri Porten  <porten@kde.org>

	* runtests.cpp: bail out if some evil-doer has manipulated $HOME

1998-09-26  Mario Weilguni <mweilguni@kde.org>

	* cosmetic changes in ppplog.cpp

1998-09-24  Mario Weilguni <mweilguni@kde.org>

	* Ownership of PPP logfiles corrected to the real, not the
	effective user id

1998-09-23  Harri Porten  <porten@kde.org>

	* ppplog.cpp: skip remote message if empty
	* ppplog.cpp: fixed segfault triggered by virgin log files

1998-09-21  Mario Weilguni <mweilguni@kde.org>

	* introducing quickhelp
	* forgot to add i18n to quickhelp entries, fixed this

1998-09-20  Mario Weilguni <mweilguni@kde.org>

	* PPP-arguments dialog reworked	
