@@ -1,3 +1,3 @@
 #ifndef KPPPVERSION
-#define KPPPVERSION "1.4.19"
+#define KPPPVERSION "1.4.20"
 #endif
