@@ -1,3 +1,8 @@
+1998-10-13  Harri Porten  <porten@kde.org>
+
+	* ppplog.cpp: offer some advice based on keywords found in the log
+	(very primitive so far, but may be extended later)
+
 1998-10-09  Harri Porten  <porten@kde.org>
 
 	* modem.cpp: additional data flushes
